INSTALL( FILES tnlBackwardFiniteDifference.h
					tnlBackwardFiniteDifference_impl.h
					tnlExactFlowDiffusion.h
					tnlExactFlowDiffusion_impl.h
					tnlForwardFiniteDifference.h
					tnlForwardFiniteDifference_impl.h
					tnl-mean-curvature-flow.cpp
					tnl-mean-curvature-flow.h
					tnlMeanCurvatureFlowDiffusion.h
					tnlMeanCurvatureFlowDiffusion_impl.h
					tnl-mean-curvature-flow-eoc.cpp
					tnl-mean-curvature-flow-eoc.h
					tnlMeanCurvatureFlowEocProblem.h
					tnlMeanCurvatureFlowEocProblem_impl.h
					tnlMeanCurvatureFlowEocRhs.h
					tnlMeanCurvatureFlowEocRhs_impl.h
					tnlMeanCurvatureFlowProblem.h
					tnlMeanCurvatureFlowProblem_impl.h
					tnlOperatorQ.h
					tnlOperatorQ_impl.h
					tnl-run-mean-curvature-flow
					tnl-run-mean-curvature-flow-eoc-test
         DESTINATION share/tnl-${tnlVersion}/examples/mean-curvature-flow )
