INSTALL( FILES tnl-mean-curvature-flow.cpp
					tnl-mean-curvature-flow.h
					tnl-mean-curvature-flow-eoc.cpp
					tnl-mean-curvature-flow-eoc.h
					tnl-run-mean-curvature-flow
					tnl-run-mean-curvature-flow-eoc-test
					Makefile
         DESTINATION share/tnl-${tnlVersion}/examples/mean-curvature-flow )
