INSTALL( FILES Makefile
               main.cpp
               simpleProblemSolver.h
               simpleProblemSolver_impl.h
               simpleProblemSetter.h
               simpleProblemSetter_impl.h
               simple-solver.cfg.desc
               run-simple-solver
         DESTINATION share/tnl-${tnlVersion}/examples/simple-solver )