INSTALL( FILES Makefile
               main.cpp
               simpleProblemSolver.h
               simpleProblemSolver_impl.h
               simpleProblemSetter.h
               simpleProblemSetter_impl.h
               simpleProblemConfig.h
               run-simple-solver
         DESTINATION share/tnl-${tnlVersion}/examples/simple-solver )