#add_subdirectory( simple-examples )
#add_subdirectory( Hamilton-Jacobi )
#add_subdirectory( heat-equation )
#add_subdirectory( transport-equation )
#add_subdirectory( navier-stokes )
#add_subdirectory( inviscid-flow )
#add_subdirectory( inviscid-flow-sw )
#add_subdirectory( inviscid-flow-vl )
##add_subdirectory( mean-curvature-flow )
#add_subdirectory( flow )
#add_subdirectory( flow-sw )
#add_subdirectory( flow-vl )
